--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+   <head>
+      <title>Title of the document</title>
+   </head>
+   <body>
+      <form action="https://www.w3docs.com/">
+         <button type="submit">Click me</button>
+      </form>
+   </body>
 </html>
