--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Title of the document</title>
    </head>
    <body>
-      <form action="https://www.w3docs.com/">
+      <form action="https://hunterjimenezsbu.github.io/pdfstorage/OoPdfFormExample.pdf">
          <button type="submit">Click me</button>
       </form>
    </body>
