--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
-<!DOCTYPE html>
 <html>
    <head>
       <title>Title of the document</title>
    </head>
    <body>
-      <form action="https://hunterjimenezsbu.github.io/AbsenteeBallot.html">
-         <button type="submit">Click me</button>
+      <form action="https://www.w3docs.com/">
+         <button class="Checking_Voter_Registration">Checking Voter Registration</button>
       </form>
+      <form action="https://hunterjimenezsbu.github.io/VoterRegistration.html">
+        <button class="Voter_Registration">Voter Registration</button>
+     </form>
+     <form action="https://hunterjimenezsbu.github.io/AbsenteeBallot.html">
+        <button class="Absentee_Ballot">Absentee Ballot</button>
+     </form>
+     <form action="https://www.w3docs.com/">
+        <button class="Need_Help">Need Help ?</button>
+     </form>
    </body>
+
+<style>
+.Checking_Voter_Registration {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:16px 38px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.Checking_Voter_Registration:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.Checking_Voter_Registration:active {
+	position:relative;
+	top:1px;
+}
+.Voter_Registration {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:16px 38px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+   
+}
+.Voter_Registration:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.Voter_Registration:active {
+	position:relative;
+	top:1px;
+}
+.Absentee_Ballot {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:16px 38px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+    
+}
+.Absentee_Ballot:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.Absentee_Ballot:active {
+	position:relative;
+	top:1px;
+}
+.Need_Help {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:16px 38px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+   
+}
+.Need_Help:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.Need_Help:active {
+	position:relative;
+	top:1px;
+}
+</style>
 </html>
