--- a/AbsenteeBallot.html
+++ b/AbsenteeBallot.html
@@ -75,7 +75,7 @@ input[type=text] {
 
 <script>
 function locate(){
-  "https://hunterjimenezsbu.github.io/pdfstorage/Voter_Registration/" + document.getElementById("myInput").value.toString().replace(" ","_") + "_Absentee.pdf"
+  window.location.href ="https://hunterjimenezsbu.github.io/pdfstorage/Voter_Registration/" + document.getElementById("myInput").value.toString().replace(" ","_") + "_Absentee.pdf"
 }
 function autocomplete(inp, arr) {
   /*the autocomplete function takes two arguments,
