--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       <form action="https://www.w3docs.com/">
          <button class="Checking_Voter_Registration">Checking Voter Registration</button>
       </form>
-      <form action="https://hunterjimenezsbu.github.io/VoterRegistration.html">
+      <form action="https://hunterjimenezsbu.github.io/GoogleFormReg.html">
         <button class="Voter_Registration">Voter Registration</button>
      </form>
-     <form action="https://hunterjimenezsbu.github.io/AbsenteeBallot.html">
+     <form action="https://hunterjimenezsbu.github.io/GoogleFormAbs.html">
         <button class="Absentee_Ballot">Absentee Ballot</button>
      </form>
      <form action="https://www.w3docs.com/">
