--- a/pdfstorage/Voter_Registration/New_York_Registration.html
+++ b/pdfstorage/Voter_Registration/New_York_Registration.html
@@ -1,1 +1,9 @@
-<script type="text/javascript" src="https://form.jotform.com/jsform/200855800653049"></script>
+<!DOCTYPE html>
+<body>
+<script>
+window.location.href ="https://form.jotform.com/jsform/200855800653049" 
+</script>
+</body>
+</html>
+
+
