--- a/pdfstorage/Voter_Registration/New_York_Registration.html
+++ b/pdfstorage/Voter_Registration/New_York_Registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
 <script>
-window.location.href ="https://form.jotform.com/jsform/200855800653049" 
+window.location.href ="https://form.jotform.com/200855800653049" 
 </script>
 </body>
 </html>
